// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > model > file > postSimpleUpload > 200 > ok 1`] = `
{
  "file": {
    "_id": "test",
  },
}
`;

exports[`routes > model > file > postSimpleUpload > 400 > no name 1`] = `
{
  "error": {
    "context": {
      "errors": [
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "Required",
          "path": [
            "query",
            "name",
          ],
          "received": "undefined",
        },
      ],
    },
    "message": "Path: query.name - Message: Required",
    "name": "Bailo Error",
  },
}
`;

exports[`routes > model > file > postSimpleUpload > audit > expected call 1`] = `
{
  "_id": "test",
}
`;
